[package]
name = "ziplocation_actix"
version = "0.1.0"
authors = ["Jim Wharton <jimwharton@overstock.com>"]

[dependencies]
actix = "0.5.7"
actix-web = "0.6"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["postgres"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
